--- a/client/src/features/navbar/NavbarPage.css
+++ b/client/src/features/navbar/NavbarPage.css
@@ -4,7 +4,7 @@ li{
 
 
 nav{
-    background-color: papayawhip;
+    background-color: #e6f5e6;
     border-left: solid;
     border-left-width: 1px;
     border-right: solid;
